--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ authors = ["Bryan 'icesoldier' Mitchell <bryan@icesoldier.me>"]
 csv = "0.14.3"
 rustc-serialize = "0.3.18"
 irc = "0.10.1"
+rand = "0.3.14"
